crates/nash-codegen/src/lower/snapshots/nash_codegen__lower__tests__boolean_case_does_not_evaluate_unselected_failure.snap
---
source: crates/nash-codegen/src/lower/tests.rs
expression: "crate::harness::eval_core(&arena, core)"
---
--- uplc
(program 1.1.0
  [(lam generated_1
    (force
      [[[(force (builtin ifThenElse)) generated_1] (delay (con integer 42))]
        (delay (error))]))
    (con bool True)])
--- result
(con integer 42)
--- logs
[]
--- budget
cpu: 284149, memory: 1401
