crates/nash-codegen/src/lower/snapshots/nash_codegen__lower__tests__field_projection_and_tag_order_are_semantic.snap
---
source: crates/nash-codegen/src/lower/tests.rs
expression: "crate::harness::eval_core(&arena, core)"
---
--- uplc
(program 1.1.0 (case (constr 1 (con integer 17)) (error) (lam x_1 x_1)))
--- result
(con integer 17)
--- logs
[]
--- budget
cpu: 80100, memory: 600
