crates/nash-codegen/src/lower/snapshots/nash_codegen__lower__tests__let_application_evaluates.snap
---
source: crates/nash-codegen/src/lower/tests.rs
expression: "crate::harness::eval_core(&arena, core)"
---
--- uplc
(program 1.1.0
  [(lam x_1 [(lam y_2 [[(builtin addInteger) x_1] y_2]) (con integer 2)])
    (con integer 1)])
--- result
(con integer 3)
--- logs
[]
--- budget
cpu: 277308, memory: 1202
