crates/nash-codegen/src/lower/snapshots/nash_codegen__lower__tests__trace_precedes_failure.snap
---
source: crates/nash-codegen/src/lower/tests.rs
expression: "crate::harness::eval_core(&arena, core)"
---
--- uplc
(program 1.1.0
  (force
    [[(force (builtin trace)) (con string "before failure")] (delay (error))]))
--- result
error: ExplicitErrorTerm
--- logs
["before failure"]
--- budget
cpu: 59598, memory: 132
